<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNombrePerfil"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:textStyle="bold"
        android:textColor="#100205" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombrePerfil"
        android:textSize="20sp"
        android:hint="@string/hintNombrePerfil" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblModulos"
        android:id="@+id/textView2"
        android:textSize="25sp"
        android:textColor="#010100"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCheckUsuario"
                        android:id="@+id/chUsuarios"
                        android:layout_marginLeft="0dp"
                        android:textSize="20sp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCheckPerfiles"
                        android:id="@+id/chPerfiles"
                        android:layout_marginLeft="25dp"
                        android:textSize="20sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCheckActividades"
                        android:id="@+id/chActividades"
                        android:textSize="20sp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCheckGestores"
                        android:id="@+id/chGestores"
                        android:layout_marginLeft="25dp"
                        android:textSize="20sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCheckParticipantes"
                        android:id="@+id/chParticipantes"
                        android:textSize="20sp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCheckConstancias"
                        android:id="@+id/chConstancias"
                        android:layout_marginLeft="25dp"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>